# xfinder

./: .gitignore  Cargo.toml  DUAL_MODE_ARCHITECTURE.md  GIT_WORKFLOW.md  IMPLEMENTATION_PLAN.md  LEANN_INTEGRATION_PLAN.md  LICENSE  PHASE1_PROGRESS.md  QUICKSTART.md  README.md  TESTING.md  WSL_MIGRATION_GUIDE.md  WSL_QUICKSTART.sh  requirements.txt
.claude/: instructions.md
docs/: 00_INDEX.md  01_PRD_Product_Requirements.md  02_Architecture_Technique.md  03_Decisions_Techniques.md  04_API_Schemas.md  05_Plan_Tests_Metriques.md  06_Backlog_Complet.md  07_Architecture_Securite.md  08_Architecture_Finale_egui.md
src/: app.rs  app_test.rs  app_test.rs.disabled  audio_player.rs  hash.rs  lib.rs  main.rs
src/config/: mod.rs
src/database/: mod.rs  queries.rs  schema.rs
src/search/: file_watcher.rs  mod.rs  scanner.rs  search_test.rs  search_test.rs.disabled  tantivy_index.rs
src/semantic/: background_indexer.rs  chunker.rs  content_extractor.rs  embedding_generator.rs  leann_wrapper.rs  mod.rs  semantic_indexer.rs
src/system/: autostart.rs  hotkey.rs  mod.rs  scheduler.rs  tray.rs  window_restore.rs
src/ui/: assist_me_ui.rs  icons.rs  main_panel.rs  mod.rs  preview_panel.rs  settings_modal.rs  side_panel.rs  statistics_modal.rs  top_panel.rs
tests/: config_test.rs  e2e_phase1.rs
