[package]
name = "xfinder"
version = "0.1.0"
edition = "2021"

[dependencies]
# === UI (egui natif) ===
eframe = "0.27"
egui = "0.27"

# === Search (Tantivy - comme spotlight_windows) ===
tantivy = "0.22"

# === Database ===
rusqlite = { version = "0.32", features = ["bundled"] }

# === Filesystem ===
walkdir = "2.4"

# === Utils ===
anyhow = "1.0"
chrono = "0.4"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
