[package]
name = "xfinder"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "Moteur de recherche de fichiers ultra-rapide avec surveillance temps réel"
repository = "https://github.com/fless-lab/xfinder"
authors = ["Abdou-Raouf ATARMLA"]

[dependencies]
# === UI (egui natif) ===
eframe = "0.27"
egui = "0.27"
rfd = "0.14"
image = "0.24"

# === Search (Tantivy - comme spotlight_windows) ===
tantivy = "0.22"

# === Database ===
rusqlite = { version = "0.32", features = ["bundled"] }

# === Filesystem ===
walkdir = "2.4"
notify = "6.1"
crossbeam-channel = "0.5"

# === Utils ===
anyhow = "1.0"
chrono = "0.4"
blake3 = "1.5"
dirs = "5.0"
opener = "0.7"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# === System Integration ===
tray-icon = "0.14"
tokio = { version = "1", features = ["rt", "time", "macros"] }
global-hotkey = "0.5"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

# === Media ===
rodio = "0.17"
pdf-extract = "0.7"
mp4parse = "0.17"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
strip = true
